--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,9 @@
     "manifest_version": 2,
     "name": "Note Taking app.",
     "version": "1.0.0",
+    "icons" : {
+        "128" : "NoteX.png"
+    },
     "browser_action": {
         "default_popup": "index.html"
     },
